--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <version>2.7.0</version>
         </dependency>
         
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
